List ingestion clients backend
